--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "gh-pages": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "sass": "^1.43.4",
     "web-vitals": "^1.0.1"
   },
